<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              >
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        >
        <TextView android:id="@+id/text1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text1"
              android:textSize="20sp"
              android:textColor="#808080"
              />
        <TextView android:id="@+id/text2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text2"
              android:textSize="20sp"
              android:textColor="#CC9900"
              />
        <TextView android:id="@+id/text3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text3"
              android:textSize="20sp"
              android:textColor="#808080"
              />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        >
        <TextView android:id="@+id/text4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text4"
              android:textSize="20sp"
              android:textColor="#808080"
              />
        <TextView android:id="@+id/text5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text5"
              android:textSize="20sp"
              android:textColor="#CC9900"
              />
        <TextView android:id="@+id/text6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text6"
              android:textSize="20sp"
              android:textColor="#808080"
              />
    </LinearLayout>
</LinearLayout>